<resources>
    <string name="app_name">Einkaufsliste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Fehler</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_web_client_id">813378276227-pvpc2210i6ma9a2u661i3j9174olof4h.apps.googleusercontent.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_mail">E-Mail</string>
    <string name="passwort">Passwort</string>
    <string name="login">Login</string>
    <string name="klicke_hier_um_dich_zu_registrieren">Klicke hier um dich zu registrieren</string>
    <string name="login_via_google">Login via Google</string>
    <string name="register">Jetzt registrieren</string>
    <string name="klicke_hier_um_dich_zu_anmelden">zu Login wechseln</string>
    <string name="mindestens_8_zeichen">Mindestens 8 Zeichen</string>
    <string name="mindestens_ein_gro_buchstabe">Mindestens ein Großbuchstabe</string>
    <string name="mindestens_ein_sonderzeichen">Mindestens ein Sonderzeichen</string>
    <string name="mindestens_eine_zahl">Mindestens eine Zahl</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="logout">Logout</string>
    <string name="darkmode_aktvieren">Darkmode aktvieren</string>
    <string name="darkmode_deaktvieren">Darkmode deaktivieren</string>
    <string name="oeffneDrawer">Menü öffnen</string>
    <string name="schliesseDrawer">Menü ausblenden</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bersicht">Übersicht</string>
    <string name="ueber_uns">Über uns</string>
    <string name="produkt_hinzuf_gen">Produkt hinzufügen</string>
    <string name="liste_hinzuf_gen">Liste hinzufügen</string>
    <string name="passwort_vergessen">Passwort vergessen?</string>
    <string name="produktname">Produktname</string>
    <string name="zutaten">Zutaten</string>
    <string name="n_hrwerte">Nährwerte</string>
    <string name="allergene">Allergene</string>
    <string name="herkunft">Herkunft</string>
    <string name="hinzuf_gen">Hinzufügen</string>
    <string name="produktmenge">Produktmenge</string>
    <string name="darkmode_ein_ausschalten">Darkmode ein-/ausschalten</string>
    <string name="design">Design</string>
    <string name="konto">Konto</string>
    <string name="gruppe_erstellen">Gruppe erstellen</string>
    <string name="uid_kopieren">Uid Kopieren</string>
    <string name="zeige_user_id">Kopiere UserId</string>
    <string name="gruppeninhalte">Gruppeninhalte</string>
    <string name="produkte">Produkte</string>
    <string name="profile_image_description">Bild des Users aus Firebase/Google-Account</string>
    <string name="e_mail_des_users">E-Mail des Users</string>
    <string name="profil_bearbeiten">Profil bearbeiten</string>
    <string name="name_user">Name User</string>
    <string name="wische_nach_links_um_einen_nutzer_zu_entfernen">Wische nach links, um einen Nutzer zu entfernen.</string>
    <string name="mitglieder_der_liste">Mitglieder der Liste</string>
    <string name="wische_nach_links_um_produkt_zu_entfernen">Wische nach links, um Produkt zu entfernen</string>
    <string name="e_mail_input_member">E-Mail</string>
    <string name="app_logo">App-Logo</string>
    <string name="produkt_hinzufuegen">Produkt hinzufügen</string>
    <string name="n_hrstoffe">Nährstoffe</string>
    <string name="menge_pro_100g">Menge (pro 100g)</string>
    <string name="einheit">Einheit</string>
    <string name="produkt_eingeben">Produkt eingeben</string>
    <string name="_0perc">0%</string>
    <string name="marke">Marke</string>
    <string name="menge">Menge</string>
</resources>