<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_uebersicht"
            android:icon="@drawable/shopping_cart_icon"
            android:title="@string/produkte"/>

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/groups_icon"
            android:title="@string/gruppeninhalte"/>

    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/design">
            <menu>
                <item
                    android:id="@+id/darkmode"
                    android:icon="@drawable/darkmode_icon"
                    android:title="@string/darkmode_ein_ausschalten"/>
            </menu>
        </item>
    </group>


    <item android:title="@string/konto">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
