<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".fragment.ProductDetailsFragment"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/produktBildDetails"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/produktNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produktname"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/produktZutatenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zutaten"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/produktNutriText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_hrwerte"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/produktAllergeneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergene"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/produktHerkunftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/herkunft"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/produktHinzufuegen"
        android:text="@string/hinzuf_gen"
        android:layout_gravity="center"
        />

</LinearLayout>