<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/validation_password">

    <TextView
        android:id="@+id/checkLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mindestens_8_zeichen"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/checkUppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mindestens_ein_gro_buchstabe"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/checkSpecialChar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mindestens_ein_sonderzeichen"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/checkNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mindestens_eine_zahl"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

</LinearLayout>