<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="10sp"
    android:paddingEnd="10sp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="5dp"
        >

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_user_icon"
            android:contentDescription="@string/profile_image_description" />

        <!-- Angepasster TextView: Breite 0dp und Gewicht 1, plus Ellipsize -->
        <TextView
            android:id="@+id/sideMenuUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_user"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <ImageButton
            android:id="@+id/editSideMenuUsernameButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profil_bearbeiten"
            android:src="@drawable/edit_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/nutzerNameSlideshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_des_users"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        />

</LinearLayout>
