<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:layout_marginBottom="5dp"

        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/login_icon_app"
        android:layout_marginBottom="5dp"
        />


    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_borderradius"
        android:textSize="20sp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:paddingStart="15dp"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:autofillHints="password"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:background="@drawable/edittext_borderradius"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle"
        android:singleLine="true"
        android:paddingStart="15dp"
            />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwort_vergessen"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_via_google"
        android:layout_gravity="center"
        android:textStyle="bold"
        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klicke_hier_um_dich_zu_registrieren"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"/>


</LinearLayout>