<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/login_icon_app" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_borderradius"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:autofillHints="password"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_borderradius"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp" />

    <include android:id="@+id/validation_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/validation_password"
        android:layout_marginStart="15sp"
        android:visibility="gone">
    </include>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/loginNow"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klicke_hier_um_dich_zu_anmelden"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"/>

</LinearLayout>